--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -885,86 +885,86 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>butaritari</td>\n",
-       "      <td>3.07</td>\n",
-       "      <td>172.79</td>\n",
-       "      <td>83.32</td>\n",
-       "      <td>74</td>\n",
-       "      <td>84</td>\n",
-       "      <td>10.42</td>\n",
-       "      <td>KI</td>\n",
-       "      <td>1593605283</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>1</td>\n",
-       "      <td>yerbogachen</td>\n",
-       "      <td>61.28</td>\n",
-       "      <td>108.01</td>\n",
-       "      <td>79.52</td>\n",
-       "      <td>58</td>\n",
-       "      <td>20</td>\n",
-       "      <td>7.70</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>1593605121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>cape town</td>\n",
-       "      <td>-33.93</td>\n",
-       "      <td>18.42</td>\n",
-       "      <td>73.00</td>\n",
-       "      <td>77</td>\n",
-       "      <td>27</td>\n",
-       "      <td>4.70</td>\n",
+       "      <th>0</th>\n",
+       "      <td>hermanus</td>\n",
+       "      <td>-34.42</td>\n",
+       "      <td>19.23</td>\n",
+       "      <td>57.00</td>\n",
+       "      <td>92</td>\n",
+       "      <td>43</td>\n",
+       "      <td>1.97</td>\n",
        "      <td>ZA</td>\n",
-       "      <td>1593605039</td>\n",
+       "      <td>1603773188</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>touba</td>\n",
-       "      <td>8.28</td>\n",
-       "      <td>-7.68</td>\n",
-       "      <td>79.97</td>\n",
-       "      <td>75</td>\n",
-       "      <td>82</td>\n",
-       "      <td>3.58</td>\n",
-       "      <td>CI</td>\n",
-       "      <td>1593605284</td>\n",
+       "      <th>1</th>\n",
+       "      <td>puerto cabezas</td>\n",
+       "      <td>14.04</td>\n",
+       "      <td>-83.39</td>\n",
+       "      <td>78.49</td>\n",
+       "      <td>87</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3.71</td>\n",
+       "      <td>NI</td>\n",
+       "      <td>1603773532</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>jamestown</td>\n",
-       "      <td>42.10</td>\n",
-       "      <td>-79.24</td>\n",
-       "      <td>64.00</td>\n",
-       "      <td>88</td>\n",
-       "      <td>1</td>\n",
+       "      <th>2</th>\n",
+       "      <td>dikson</td>\n",
+       "      <td>73.51</td>\n",
+       "      <td>80.55</td>\n",
+       "      <td>10.35</td>\n",
+       "      <td>95</td>\n",
+       "      <td>87</td>\n",
+       "      <td>17.92</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1603773185</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>chapada dos guimaraes</td>\n",
+       "      <td>-15.46</td>\n",
+       "      <td>-55.75</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>69</td>\n",
+       "      <td>20</td>\n",
        "      <td>6.93</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1593605284</td>\n",
+       "      <td>BR</td>\n",
+       "      <td>1603773457</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ushuaia</td>\n",
+       "      <td>-54.80</td>\n",
+       "      <td>-68.30</td>\n",
+       "      <td>44.60</td>\n",
+       "      <td>48</td>\n",
+       "      <td>20</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>1603772899</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          City    Lat     Lng  Max Temp  Humidity  Cloudiness  Wind Speed  \\\n",
-       "0   butaritari   3.07  172.79     83.32        74          84       10.42   \n",
-       "1  yerbogachen  61.28  108.01     79.52        58          20        7.70   \n",
-       "2    cape town -33.93   18.42     73.00        77          27        4.70   \n",
-       "3        touba   8.28   -7.68     79.97        75          82        3.58   \n",
-       "4    jamestown  42.10  -79.24     64.00        88           1        6.93   \n",
+       "                    City    Lat    Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0               hermanus -34.42  19.23     57.00        92          43   \n",
+       "1         puerto cabezas  14.04 -83.39     78.49        87         100   \n",
+       "2                 dikson  73.51  80.55     10.35        95          87   \n",
+       "3  chapada dos guimaraes -15.46 -55.75     78.80        69          20   \n",
+       "4                ushuaia -54.80 -68.30     44.60        48          20   \n",
        "\n",
-       "  Country        Date  \n",
-       "0      KI  1593605283  \n",
-       "1      RU  1593605121  \n",
-       "2      ZA  1593605039  \n",
-       "3      CI  1593605284  \n",
-       "4      US  1593605284  "
+       "   Wind Speed Country        Date  \n",
+       "0        1.97      ZA  1603773188  \n",
+       "1        3.71      NI  1603773532  \n",
+       "2       17.92      RU  1603773185  \n",
+       "3        6.93      BR  1603773457  \n",
+       "4       14.99      AR  1603772899  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -972,13 +972,14 @@
    "source": [
     "# Initialize the dataframe from the dictionary we created earlier and visualize it\n",
     "weather_df = pd.DataFrame(data_storage)\n",
-    "\n",
+    "# Write our dataframe to a csv file in the current folder\n",
+    "weather_df.to_csv('Weather_Check.csv')\n",
     "weather_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -1013,84 +1014,84 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>count</td>\n",
-       "      <td>599.000000</td>\n",
-       "      <td>599.000000</td>\n",
-       "      <td>599.000000</td>\n",
-       "      <td>599.000000</td>\n",
-       "      <td>599.000000</td>\n",
-       "      <td>599.000000</td>\n",
-       "      <td>5.990000e+02</td>\n",
+       "      <th>count</th>\n",
+       "      <td>577.000000</td>\n",
+       "      <td>577.000000</td>\n",
+       "      <td>577.000000</td>\n",
+       "      <td>577.000000</td>\n",
+       "      <td>577.000000</td>\n",
+       "      <td>577.000000</td>\n",
+       "      <td>5.770000e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>mean</td>\n",
-       "      <td>19.877028</td>\n",
-       "      <td>19.568998</td>\n",
-       "      <td>69.794808</td>\n",
-       "      <td>69.353923</td>\n",
-       "      <td>51.569282</td>\n",
-       "      <td>7.979416</td>\n",
-       "      <td>1.593605e+09</td>\n",
+       "      <th>mean</th>\n",
+       "      <td>18.752548</td>\n",
+       "      <td>20.658007</td>\n",
+       "      <td>59.358042</td>\n",
+       "      <td>71.790295</td>\n",
+       "      <td>53.733102</td>\n",
+       "      <td>7.654679</td>\n",
+       "      <td>1.603773e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>std</td>\n",
-       "      <td>33.262944</td>\n",
-       "      <td>91.418472</td>\n",
-       "      <td>15.678452</td>\n",
-       "      <td>22.704698</td>\n",
-       "      <td>35.405602</td>\n",
-       "      <td>5.660694</td>\n",
-       "      <td>5.738815e+01</td>\n",
+       "      <th>std</th>\n",
+       "      <td>33.510643</td>\n",
+       "      <td>89.688114</td>\n",
+       "      <td>21.456181</td>\n",
+       "      <td>22.219846</td>\n",
+       "      <td>39.059181</td>\n",
+       "      <td>5.106062</td>\n",
+       "      <td>1.511628e+02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>min</td>\n",
+       "      <th>min</th>\n",
        "      <td>-54.800000</td>\n",
-       "      <td>-179.170000</td>\n",
-       "      <td>12.200000</td>\n",
-       "      <td>7.000000</td>\n",
+       "      <td>-175.200000</td>\n",
+       "      <td>-4.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "      <td>0.000000</td>\n",
-       "      <td>0.360000</td>\n",
-       "      <td>1.593605e+09</td>\n",
+       "      <td>0.130000</td>\n",
+       "      <td>1.603773e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>25%</td>\n",
-       "      <td>-8.540000</td>\n",
-       "      <td>-61.210000</td>\n",
-       "      <td>59.000000</td>\n",
-       "      <td>55.000000</td>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>3.620000</td>\n",
-       "      <td>1.593605e+09</td>\n",
+       "      <th>25%</th>\n",
+       "      <td>-8.260000</td>\n",
+       "      <td>-58.620000</td>\n",
+       "      <td>46.000000</td>\n",
+       "      <td>61.000000</td>\n",
+       "      <td>12.000000</td>\n",
+       "      <td>4.030000</td>\n",
+       "      <td>1.603773e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>50%</td>\n",
-       "      <td>24.370000</td>\n",
-       "      <td>24.670000</td>\n",
-       "      <td>73.110000</td>\n",
-       "      <td>75.000000</td>\n",
-       "      <td>59.000000</td>\n",
+       "      <th>50%</th>\n",
+       "      <td>22.080000</td>\n",
+       "      <td>21.720000</td>\n",
+       "      <td>64.400000</td>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>69.000000</td>\n",
        "      <td>6.730000</td>\n",
-       "      <td>1.593605e+09</td>\n",
+       "      <td>1.603773e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>75%</td>\n",
-       "      <td>46.585000</td>\n",
-       "      <td>102.255000</td>\n",
-       "      <td>80.600000</td>\n",
-       "      <td>87.000000</td>\n",
-       "      <td>85.000000</td>\n",
-       "      <td>11.050000</td>\n",
-       "      <td>1.593605e+09</td>\n",
+       "      <th>75%</th>\n",
+       "      <td>46.620000</td>\n",
+       "      <td>102.500000</td>\n",
+       "      <td>76.820000</td>\n",
+       "      <td>89.000000</td>\n",
+       "      <td>90.000000</td>\n",
+       "      <td>10.200000</td>\n",
+       "      <td>1.603773e+09</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>max</td>\n",
+       "      <th>max</th>\n",
        "      <td>78.220000</td>\n",
        "      <td>179.320000</td>\n",
-       "      <td>116.600000</td>\n",
+       "      <td>95.000000</td>\n",
        "      <td>100.000000</td>\n",
        "      <td>100.000000</td>\n",
-       "      <td>42.500000</td>\n",
-       "      <td>1.593605e+09</td>\n",
+       "      <td>34.450000</td>\n",
+       "      <td>1.603774e+09</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1098,32 +1099,34 @@
       ],
       "text/plain": [
        "              Lat         Lng    Max Temp    Humidity  Cloudiness  Wind Speed  \\\n",
-       "count  599.000000  599.000000  599.000000  599.000000  599.000000  599.000000   \n",
-       "mean    19.877028   19.568998   69.794808   69.353923   51.569282    7.979416   \n",
-       "std     33.262944   91.418472   15.678452   22.704698   35.405602    5.660694   \n",
-       "min    -54.800000 -179.170000   12.200000    7.000000    0.000000    0.360000   \n",
-       "25%     -8.540000  -61.210000   59.000000   55.000000   20.000000    3.620000   \n",
-       "50%     24.370000   24.670000   73.110000   75.000000   59.000000    6.730000   \n",
-       "75%     46.585000  102.255000   80.600000   87.000000   85.000000   11.050000   \n",
-       "max     78.220000  179.320000  116.600000  100.000000  100.000000   42.500000   \n",
+       "count  577.000000  577.000000  577.000000  577.000000  577.000000  577.000000   \n",
+       "mean    18.752548   20.658007   59.358042   71.790295   53.733102    7.654679   \n",
+       "std     33.510643   89.688114   21.456181   22.219846   39.059181    5.106062   \n",
+       "min    -54.800000 -175.200000   -4.000000    1.000000    0.000000    0.130000   \n",
+       "25%     -8.260000  -58.620000   46.000000   61.000000   12.000000    4.030000   \n",
+       "50%     22.080000   21.720000   64.400000   77.000000   69.000000    6.730000   \n",
+       "75%     46.620000  102.500000   76.820000   89.000000   90.000000   10.200000   \n",
+       "max     78.220000  179.320000   95.000000  100.000000  100.000000   34.450000   \n",
        "\n",
        "               Date  \n",
-       "count  5.990000e+02  \n",
-       "mean   1.593605e+09  \n",
-       "std    5.738815e+01  \n",
-       "min    1.593605e+09  \n",
-       "25%    1.593605e+09  \n",
-       "50%    1.593605e+09  \n",
-       "75%    1.593605e+09  \n",
-       "max    1.593605e+09  "
+       "count  5.770000e+02  \n",
+       "mean   1.603773e+09  \n",
+       "std    1.511628e+02  \n",
+       "min    1.603773e+09  \n",
+       "25%    1.603773e+09  \n",
+       "50%    1.603773e+09  \n",
+       "75%    1.603773e+09  \n",
+       "max    1.603774e+09  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "weather_df.describe()"
+   ]
   },
   {
    "cell_type": "markdown",
