Commented the code for readability

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -793,6 +793,7 @@
     "print('-----------------------------')\n",
     "for city in cities:\n",
     "    try:\n",
+    "        \n",
     "        query_url = url + \"&q=\" + city\n",
     "        weather = requests.get(query_url).json()\n",
     "        data_storage['Lat'].append(weather['coord']['lat'])\n",
@@ -1130,6 +1131,7 @@
     }
    ],
    "source": [
+    "# Create a summary statistics table for our dataframe\n",
     "weather_df.describe()"
    ]
   },
@@ -1250,6 +1252,7 @@
     }
    ],
    "source": [
+    "# Plot the data and adjust lables and title as appropriate\n",
     "plt.scatter(weather_df['Lat'],weather_df['Max Temp'],edgecolors = 'black')\n",
     "plt.grid()\n",
     "plt.xlabel('Latitude')\n",
@@ -1284,6 +1287,7 @@
     }
    ],
    "source": [
+    "# Plot the data and adjust lables and title as appropriate\n",
     "plt.scatter(weather_df['Lat'],weather_df['Humidity'],edgecolors = 'black')\n",
     "plt.grid()\n",
     "plt.xlabel('Latitude')\n",
@@ -1318,6 +1322,7 @@
     }
    ],
    "source": [
+    "# Plot the data and adjust lables and title as appropriate\n",
     "plt.scatter(weather_df['Lat'],weather_df['Cloudiness'],edgecolors = 'black')\n",
     "plt.grid()\n",
     "plt.xlabel('Latitude')\n",
@@ -1352,6 +1357,7 @@
     }
    ],
    "source": [
+    "# Plot the data and adjust lables and title as appropriate\n",
     "plt.scatter(weather_df['Lat'],weather_df['Wind Speed'],edgecolors = 'black')\n",
     "plt.grid()\n",
     "plt.xlabel('Latitude')\n",
@@ -1373,6 +1379,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create our northern and southern hemisphere dataframes\n",
     "north_df = weather_df.loc[weather_df['Lat'] >= 0,:]\n",
     "south_df = weather_df.loc[weather_df['Lat'] < 0,:]"
    ]
