Created the final charts

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -13,10 +13,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This is a tool that we'll need later for our plot titles\n",
     "import datetime"
    ]
   },
@@ -793,9 +794,11 @@
     "print('-----------------------------')\n",
     "for city in cities:\n",
     "    try:\n",
-    "        \n",
+    "        # Add the city to the base url\n",
     "        query_url = url + \"&q=\" + city\n",
     "        weather = requests.get(query_url).json()\n",
+    "        \n",
+    "        # Obtain each of the datapoints from the json structure that was returned\n",
     "        data_storage['Lat'].append(weather['coord']['lat'])\n",
     "        data_storage['Lng'].append(weather['coord']['lon'])\n",
     "        data_storage['Max Temp'].append(weather['main']['temp_max'])\n",
@@ -806,9 +809,11 @@
     "        data_storage['Date'].append(weather['dt'])\n",
     "        data_storage['City'].append(city)\n",
     "        \n",
+    "        # Iterate count for printing the number only if we get a valid city then print our log\n",
     "        count += 1\n",
     "        print('Processing City Number ' + str(count) + \": \" + city)\n",
     "    except:\n",
+    "        # Let the user know a city wasn't found.\n",
     "        print('City Not Found. Moving to next City.')\n",
     "print('---------------------------')\n",
     "print('Data Retrieval Complete')\n",
