--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "import os\n",
     "\n",
     "# Import API key\n",
-    "from api_keys import g_key"
+    "from config import google_api_key"
    ]
   },
   {
@@ -41,11 +41,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Cloudiness</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>harper</td>\n",
+       "      <td>4.38</td>\n",
+       "      <td>-7.72</td>\n",
+       "      <td>77.72</td>\n",
+       "      <td>88</td>\n",
+       "      <td>99</td>\n",
+       "      <td>5.28</td>\n",
+       "      <td>LR</td>\n",
+       "      <td>1603942061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>barrow</td>\n",
+       "      <td>71.29</td>\n",
+       "      <td>-156.79</td>\n",
+       "      <td>23.00</td>\n",
+       "      <td>79</td>\n",
+       "      <td>90</td>\n",
+       "      <td>6.93</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1603941974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>east london</td>\n",
+       "      <td>-33.02</td>\n",
+       "      <td>27.91</td>\n",
+       "      <td>68.27</td>\n",
+       "      <td>84</td>\n",
+       "      <td>96</td>\n",
+       "      <td>6.31</td>\n",
+       "      <td>ZA</td>\n",
+       "      <td>1603941861</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>maniitsoq</td>\n",
+       "      <td>65.42</td>\n",
+       "      <td>-52.90</td>\n",
+       "      <td>21.94</td>\n",
+       "      <td>83</td>\n",
+       "      <td>78</td>\n",
+       "      <td>3.13</td>\n",
+       "      <td>GL</td>\n",
+       "      <td>1603942061</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>velikiy ustyug</td>\n",
+       "      <td>60.76</td>\n",
+       "      <td>46.31</td>\n",
+       "      <td>42.01</td>\n",
+       "      <td>93</td>\n",
+       "      <td>100</td>\n",
+       "      <td>6.44</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1603942061</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0            City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0           0          harper   4.38   -7.72     77.72        88          99   \n",
+       "1           1          barrow  71.29 -156.79     23.00        79          90   \n",
+       "2           2     east london -33.02   27.91     68.27        84          96   \n",
+       "3           3       maniitsoq  65.42  -52.90     21.94        83          78   \n",
+       "4           4  velikiy ustyug  60.76   46.31     42.01        93         100   \n",
+       "\n",
+       "   Wind Speed Country        Date  \n",
+       "0        5.28      LR  1603942061  \n",
+       "1        6.93      US  1603941974  \n",
+       "2        6.31      ZA  1603941861  \n",
+       "3        3.13      GL  1603942061  \n",
+       "4        6.44      RU  1603942061  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "weather_df = pd.read_csv('../WeatherPy/weather_check.csv')\n",
+    "weather_df.head()\n"
    ]
   },
   {
@@ -60,17 +185,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "gmaps.configure(api_key=google_api_key)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "260d7cc902124aec9698d84b40289a6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Get the columns Lat and Lng for our location values\n",
+    "locations = weather_df[['Lat','Lng']].astype(float)\n",
+    "# Get humidty for our weight on the heatmap\n",
+    "humidity = weather_df['Humidity'].astype(float)\n",
+    "\n",
+    "# Create the figure, create the heatmap layer\n",
+    "# Adjust the max intensity to be the humidity list\n",
+    "fig = gmaps.figure()\n",
+    "heat_layer = gmaps.heatmap_layer(locations, weights = humidity, max_intensity = max(humidity), point_radius = 3, dissipating = False)\n",
+    "fig.add_layer(heat_layer)\n",
+    "fig"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -159,9 +313,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pydev",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pydev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -173,7 +327,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.10"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
