Added ideal weather parameters

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -237,10 +237,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17, 10)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Set the parameters for ideal weather (we're rather picky)\n",
+    "idealtemp = [65,75]\n",
+    "idealhumidity = 70\n",
+    "idealwind = 7\n",
+    "idealclouds = 75\n",
+    "# Remove the temperatures that are too hot or too cold\n",
+    "ideal_weather_df = weather_df.loc[(weather_df['Max Temp']<idealtemp[1]) & (weather_df['Max Temp']>idealtemp[0]),:]\n",
+    "\n",
+    "# Remove the places with too high of humidity (sorry Brazil)\n",
+    "ideal_weather_df = ideal_weather_df.loc[(ideal_weather_df['Humidity'] <= idealhumidity),:]\n",
+    "\n",
+    "# Remove winds that are too high\n",
+    "ideal_weather_df = ideal_weather_df.loc[(ideal_weather_df['Wind Speed'] <= idealwind),:]\n",
+    "\n",
+    "# Remove places that are too cloudy\n",
+    "ideal_weather_df = ideal_weather_df.loc[(ideal_weather_df['Cloudiness'] <= idealclouds),:]\n",
+    "\n",
+    "#Check how many places we still have left after the culling\n",
+    "ideal_weather_df.shape"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,7 +291,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "hotel_df = ideal_weather_df\n"
+   ]
   },
   {
    "cell_type": "code",
