--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,7 @@
     "import requests\n",
     "import gmaps\n",
     "import os\n",
+    "import json\n",
     "\n",
     "# Import API key\n",
     "from config import google_api_key"
@@ -288,19 +289,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unfortunately, the city kalashas no hotels within 5000m\n",
+      "Unfortunately, the city mount darwinhas no hotels within 5000m\n",
+      "Unfortunately, the city ganzhouhas no hotels within 5000m\n",
+      "Unfortunately, the city miram shahhas no hotels within 5000m\n"
+     ]
+    }
+   ],
    "source": [
-    "hotel_df = ideal_weather_df\n"
+    "hotel_df = ideal_weather_df\n",
+    "hotel_name = []\n",
+    "\n",
+    "# Loop through the rows of the hotel dataframe and search for hotels within 5000m\n",
+    "for index,row in hotel_df.iterrows():\n",
+    "    \n",
+    "    params = {\n",
+    "        \"location\": \"{0},{1}\".format(row['Lat'],row['Lng']),\n",
+    "        \"keyword\": \"hotel\",\n",
+    "        \"radius\": 5000,\n",
+    "        \"type\": \"lodging\",\n",
+    "        \"key\": google_api_key\n",
+    "    }\n",
+    "    base_url = 'https://maps.googleapis.com/maps/api/place/nearbysearch/json'\n",
+    "    response = requests.get(base_url, params = params).json()\n",
+    "    \n",
+    "    # Try to put the hotel name into our list\n",
+    "    try:\n",
+    "        hotel_name.append(response['results'][0]['name'])\n",
+    "    # If we can't find a hotel let the user know which city is lacking\n",
+    "    except IndexError:\n",
+    "        print('Unfortunately, the city ' + str(row['City']) + 'has no hotels within 5000m')\n",
+    "        hotel_name.append('')\n",
+    "hotel_df['Hotel Name'] = hotel_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['別邸 海と森',\n",
+       " 'Pullman Zamzam Makkah',\n",
+       " 'Lakefront Lodge Te Anau',\n",
+       " 'DB Star Hotel',\n",
+       " 'Waldorf Astoria Los Cabos Pedregal',\n",
+       " 'Hotel Alegria Gardens Amakusa',\n",
+       " '',\n",
+       " 'Casa de la Aduana Hotel Boutique',\n",
+       " '',\n",
+       " 'Luke Hotels',\n",
+       " '',\n",
+       " 'HOSPEDAJE XIMENA',\n",
+       " \"Casa Turquesa Maison d'hôtes\",\n",
+       " 'Nazuna 飫肥 城下町温泉 -小鹿倉邸-',\n",
+       " 'Kashuwa Lodge',\n",
+       " '',\n",
+       " 'Sur Plaza Hotel']"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hotel_name"
+   ]
   },
   {
    "cell_type": "code",
