Added the markers and created the final map

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -350,25 +350,26 @@
        " 'Luke Hotels',\n",
        " '',\n",
        " 'HOSPEDAJE XIMENA',\n",
-       " \"Casa Turquesa Maison d'hôtes\",\n",
+       " 'Pousada Literária de Paraty',\n",
        " 'Nazuna 飫肥 城下町温泉 -小鹿倉邸-',\n",
        " 'Kashuwa Lodge',\n",
        " '',\n",
        " 'Sur Plaza Hotel']"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Print the hotel list to see which ones we found and how may blanks we have\n",
     "hotel_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,14 +391,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "260d7cc902124aec9698d84b40289a6e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Add marker layer ontop of heat map\n",
+    "markers = gmaps.marker_layer(locations,\n",
+    "    info_box_content=hotel_info)\n",
+    "fig.add_layer(markers)\n",
     "\n",
-    "\n",
-    "# Display figure\n"
+    "# Display figure\n",
+    "fig"
    ]
   },
   {
