FInishing up the VacationPy module and reducing the number of cities that match

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,6 +170,7 @@
     }
    ],
    "source": [
+    "# Read the csv generated in WeatherPy\n",
     "weather_df = pd.read_csv('../WeatherPy/weather_check.csv')\n",
     "weather_df.head()\n"
    ]
@@ -190,18 +191,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Configure out gmaps figure with our api key\n",
     "gmaps.configure(api_key=google_api_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "260d7cc902124aec9698d84b40289a6e",
+       "model_id": "bc983379621f4c05af21e14cab85dd3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -238,16 +240,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(17, 10)"
+       "(10, 10)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,13 +257,13 @@
    "source": [
     "# Set the parameters for ideal weather (we're rather picky)\n",
     "idealtemp = [65,75]\n",
-    "idealhumidity = 70\n",
+    "idealhumidity = 60\n",
     "idealwind = 7\n",
-    "idealclouds = 75\n",
+    "idealclouds = 50\n",
     "# Remove the temperatures that are too hot or too cold\n",
     "ideal_weather_df = weather_df.loc[(weather_df['Max Temp']<idealtemp[1]) & (weather_df['Max Temp']>idealtemp[0]),:]\n",
     "\n",
-    "# Remove the places with too high of humidity (sorry Brazil)\n",
+    "# Remove the places with too high of humidity (sorry southeast US)\n",
     "ideal_weather_df = ideal_weather_df.loc[(ideal_weather_df['Humidity'] <= idealhumidity),:]\n",
     "\n",
     "# Remove winds that are too high\n",
@@ -271,6 +273,7 @@
     "ideal_weather_df = ideal_weather_df.loc[(ideal_weather_df['Cloudiness'] <= idealclouds),:]\n",
     "\n",
     "#Check how many places we still have left after the culling\n",
+    "#Turns out >10 means losing points so must be as strict as possible.\n",
     "ideal_weather_df.shape"
    ]
   },
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -298,12 +301,12 @@
      "text": [
       "Unfortunately, the city kalashas no hotels within 5000m\n",
       "Unfortunately, the city mount darwinhas no hotels within 5000m\n",
-      "Unfortunately, the city ganzhouhas no hotels within 5000m\n",
       "Unfortunately, the city miram shahhas no hotels within 5000m\n"
      ]
     }
    ],
    "source": [
+    "# Rename our dataframe and then create an empty list to hold hotels\n",
     "hotel_df = ideal_weather_df\n",
     "hotel_name = []\n",
     "\n",
@@ -323,7 +326,7 @@
     "    # Try to put the hotel name into our list\n",
     "    try:\n",
     "        hotel_name.append(response['results'][0]['name'])\n",
-    "    # If we can't find a hotel let the user know which city is lacking\n",
+    "    # If we can't find a hotel let the user know which city is lacking and put a blank in the hotel field\n",
     "    except IndexError:\n",
     "        print('Unfortunately, the city ' + str(row['City']) + 'has no hotels within 5000m')\n",
     "        hotel_name.append('')\n",
@@ -332,44 +335,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "['別邸 海と森',\n",
-       " 'Pullman Zamzam Makkah',\n",
        " 'Lakefront Lodge Te Anau',\n",
        " 'DB Star Hotel',\n",
-       " 'Waldorf Astoria Los Cabos Pedregal',\n",
        " 'Hotel Alegria Gardens Amakusa',\n",
        " '',\n",
        " 'Casa de la Aduana Hotel Boutique',\n",
        " '',\n",
-       " 'Luke Hotels',\n",
-       " '',\n",
-       " 'HOSPEDAJE XIMENA',\n",
-       " 'Pousada Literária de Paraty',\n",
-       " 'Nazuna 飫肥 城下町温泉 -小鹿倉邸-',\n",
        " 'Kashuwa Lodge',\n",
        " '',\n",
        " 'Sur Plaza Hotel']"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the hotel list to see which ones we found and how may blanks we have\n",
+    "# Likely our blanks are from our multiple levels of abstraction. We have random positions on the globe and the nearest city.\n",
+    "# Then we searched for hotels within 5000m of the random locations which may itself be >5000m from the nearest town.\n",
     "hotel_name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,13 +389,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "260d7cc902124aec9698d84b40289a6e",
+       "model_id": "bc983379621f4c05af21e14cab85dd3d",
        "version_major": 2,
        "version_minor": 0
       },
