Added analyses for all regular plots

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1250,6 +1250,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### City Latitude v Max Temperature\n",
+    "* This plot depicts the max temperature of a place relative to its longitude (distance from the equator). There is a clear trend that shows increasing temperature as you go closer to the equator at Latitude = 0.\n",
+    "* There is also a clear demonstration of the fact that more of the northern hemisphere is populated than the southern. There are more cities on the right side of the plot and they extend further away from the centerline. This means places closer to the north pole were selected. This may be an aberration of the specific points we chose, however, numerous runs of this data show a similar trend indicating that there are more cities that can be found in the northern artic regions than in the southern polar region. Just looking at a map this makes sense because the arctic circle is mostly land while the area around Antarctica is almost entirely ocean."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Latitude vs. Humidity Plot"
    ]
   },
@@ -1279,6 +1288,16 @@
     "plt.ylabel('Humidity (%)')\n",
     "plt.title('City Latitude vs. Humidity (%) ' + date)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### City Latitude v Humidity\n",
+    "* This plot demonstrates the relationship between latitude and humidty.\n",
+    "* There are two notable clusters: around Latitude = 0 and around Latitude 60.\n",
+    "* These clusters are two distinct climates, the tropics around the equator and \"Humid Continental.\" The latter occurs within large land masses far from oceans and far from the equator (but before the temperature turns too cold and everyhting turns to precipitation). This occurs only in the northern hemisphere because there aren't huge landmasses in the southern hemishpere."
    ]
   },
   {
@@ -1320,6 +1339,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Latitude v Cloudiness\n",
+    "* This plot demonstrates the relationship between latitude and the level of cloud cover.\n",
+    "* There does not appear to be a significant trend over latitude.\n",
+    "* The only trends we can really see in this data are related to how cloud cover is measured. There appear to be bands of values (0,20,40,~75,~88,100). This might indicate that the cloud cover percentage isn't a continuous variable but is instead a quantized variable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Latitude vs. Wind Speed Plot"
    ]
   },
@@ -1349,6 +1378,15 @@
     "plt.ylabel('Wind Speed (mph)')\n",
     "plt.title('City Latitude vs. Wind Speed (mph) ' + date)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### City Latitude v Wind Speed\n",
+    "* This graph displays the relationship between latitude and wind speed.\n",
+    "* There appears to be no clear trend between the two variables except that the earth has a relatively constant low wind speed nearly everywhere with a few much higher outliers."
    ]
   },
   {
