Adding in the image saving and the actual images

--- a/WeatherPy/WeatherPy.ipynb
+++ b/WeatherPy/WeatherPy.ipynb
@@ -1209,7 +1209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -1234,6 +1234,7 @@
     "plt.xlabel('Latitude')\n",
     "plt.ylabel('Max Temperature (F)')\n",
     "plt.title('City Latitude vs. Max Temperature (F) ' + date)\n",
+    "plt.savefig('./Images/City Latitude vs. Max Temperature (F).png')\n",
     "plt.show()"
    ]
   },
@@ -1255,7 +1256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1278,6 +1279,7 @@
     "plt.xlabel('Latitude')\n",
     "plt.ylabel('Humidity (%)')\n",
     "plt.title('City Latitude vs. Humidity (%) ' + date)\n",
+    "plt.savefig('./Images/City Latitude vs. Humidity (%).png')\n",
     "plt.show()"
    ]
   },
@@ -1300,7 +1302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1323,6 +1325,7 @@
     "plt.xlabel('Latitude')\n",
     "plt.ylabel('Cloudiness (%)')\n",
     "plt.title('City Latitude vs. Cloudiness (%) ' + date)\n",
+    "plt.savefig('./Images/City Latitude vs. Cloudiness (%).png')\n",
     "plt.show()"
    ]
   },
@@ -1345,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -1368,6 +1371,7 @@
     "plt.xlabel('Latitude')\n",
     "plt.ylabel('Wind Speed (mph)')\n",
     "plt.title('City Latitude vs. Wind Speed (mph) ' + date)\n",
+    "plt.savefig('./Images/City Latitude vs. Wind Speed (mph).png')\n",
     "plt.show()"
    ]
   },
@@ -1407,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1446,6 +1450,7 @@
     "plt.ylabel('Max Temp (F)')\n",
     "plt.title('Northern Hemisphere City Latitude vs. Max Temp (F) ' + date)\n",
     "plt.annotate(line_name, (0,0),fontsize=15,color=\"red\")\n",
+    "plt.savefig('./Images/Northern Hemisphere City Latitude vs. Max Temp (F).png')\n",
     "plt.show()"
    ]
   },
@@ -1458,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1497,6 +1502,7 @@
     "plt.ylabel('Max Temp (F)')\n",
     "plt.title('Southern Hemisphere City Latitude vs. Max Temp (F) ' + date)\n",
     "plt.annotate(line_name, (-30,40),fontsize=15,color=\"red\")\n",
+    "plt.savefig('./Images/Southern Hemisphere City Latitude vs. Max Temp (F).png')\n",
     "plt.show()"
    ]
   },
@@ -1519,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1558,6 +1564,7 @@
     "plt.ylabel('Humidity (%)')\n",
     "plt.title('Northern Hemisphere City Latitude vs. Humidity (%) ' + date)\n",
     "plt.annotate(line_name, (50,21),fontsize=11,color=\"red\")\n",
+    "plt.savefig('./Images/Northern Hemisphere City Latitude vs. Humidity (%).png')\n",
     "plt.show()"
    ]
   },
@@ -1570,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1609,6 +1616,7 @@
     "plt.ylabel('Humidity (%)')\n",
     "plt.title('Southern Hemisphere City Latitude vs. Humidity (%) ' + date)\n",
     "plt.annotate(line_name, (-20,21),fontsize=12,color=\"red\")\n",
+    "plt.savefig('./Images/Southern Hemisphere City Latitude vs. Humidity (%).png')\n",
     "plt.show()"
    ]
   },
@@ -1633,7 +1641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1672,6 +1680,7 @@
     "plt.ylabel('Cloudiness (%)')\n",
     "plt.title('Northern Hemisphere City Latitude vs. Cloudiness (%) ' + date)\n",
     "plt.annotate(line_name, (25,27),fontsize=10,color=\"red\")\n",
+    "plt.savefig('./Images/Northern Hemisphere City Latitude vs. Cloudiness (%).png')\n",
     "plt.show()"
    ]
   },
@@ -1684,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1723,6 +1732,7 @@
     "plt.ylabel('Cloudiness (%)')\n",
     "plt.title('Southern Hemisphere City Latitude vs. Cloudiness (%) ' + date)\n",
     "plt.annotate(line_name, (-20,21),fontsize=12,color=\"red\")\n",
+    "plt.savefig('./Images/Southern Hemisphere City Latitude vs. Cloudiness (%).png')\n",
     "plt.show()"
    ]
   },
@@ -1745,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1784,7 +1794,8 @@
     "plt.ylabel('Wind Speed (mph)')\n",
     "plt.title('Northern Hemisphere City Latitude vs. Wind Speed (mph) ' + date)\n",
     "plt.annotate(line_name, (0,20),fontsize=15,color=\"red\")\n",
-    "plt.show()"
+    "plt.savefig('./Images/Northern Hemisphere City Latitude vs. Wind Speed (mph).png')\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -1796,7 +1807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1835,6 +1846,7 @@
     "plt.ylabel('Wind Speed (mph)')\n",
     "plt.title('Southern Hemisphere City Latitude vs. Wind Speed (mph) ' + date)\n",
     "plt.annotate(line_name, (-55,26),fontsize=15,color=\"red\")\n",
+    "plt.savefig('./Images/Southern Hemisphere City Latitude vs. Wind Speed (mph).png')\n",
     "plt.show()"
    ]
   },
