--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -82,86 +82,86 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>harper</td>\n",
-       "      <td>4.38</td>\n",
-       "      <td>-7.72</td>\n",
-       "      <td>77.72</td>\n",
-       "      <td>88</td>\n",
-       "      <td>99</td>\n",
-       "      <td>5.28</td>\n",
-       "      <td>LR</td>\n",
-       "      <td>1603942061</td>\n",
+       "      <td>mana</td>\n",
+       "      <td>5.66</td>\n",
+       "      <td>-53.78</td>\n",
+       "      <td>81.55</td>\n",
+       "      <td>83</td>\n",
+       "      <td>100</td>\n",
+       "      <td>13.06</td>\n",
+       "      <td>GF</td>\n",
+       "      <td>1604030858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>barrow</td>\n",
-       "      <td>71.29</td>\n",
-       "      <td>-156.79</td>\n",
-       "      <td>23.00</td>\n",
-       "      <td>79</td>\n",
-       "      <td>90</td>\n",
-       "      <td>6.93</td>\n",
-       "      <td>US</td>\n",
-       "      <td>1603941974</td>\n",
+       "      <td>busselton</td>\n",
+       "      <td>-33.65</td>\n",
+       "      <td>115.33</td>\n",
+       "      <td>88.00</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.53</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1604030859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>east london</td>\n",
-       "      <td>-33.02</td>\n",
-       "      <td>27.91</td>\n",
-       "      <td>68.27</td>\n",
-       "      <td>84</td>\n",
-       "      <td>96</td>\n",
-       "      <td>6.31</td>\n",
-       "      <td>ZA</td>\n",
-       "      <td>1603941861</td>\n",
+       "      <td>carnarvon</td>\n",
+       "      <td>-24.87</td>\n",
+       "      <td>113.63</td>\n",
+       "      <td>78.80</td>\n",
+       "      <td>65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>14.99</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1604030859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>maniitsoq</td>\n",
-       "      <td>65.42</td>\n",
-       "      <td>-52.90</td>\n",
-       "      <td>21.94</td>\n",
-       "      <td>83</td>\n",
-       "      <td>78</td>\n",
-       "      <td>3.13</td>\n",
-       "      <td>GL</td>\n",
-       "      <td>1603942061</td>\n",
+       "      <td>esperance</td>\n",
+       "      <td>-33.87</td>\n",
+       "      <td>121.90</td>\n",
+       "      <td>73.40</td>\n",
+       "      <td>28</td>\n",
+       "      <td>93</td>\n",
+       "      <td>13.87</td>\n",
+       "      <td>AU</td>\n",
+       "      <td>1604030859</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>velikiy ustyug</td>\n",
-       "      <td>60.76</td>\n",
-       "      <td>46.31</td>\n",
-       "      <td>42.01</td>\n",
-       "      <td>93</td>\n",
-       "      <td>100</td>\n",
-       "      <td>6.44</td>\n",
-       "      <td>RU</td>\n",
-       "      <td>1603942061</td>\n",
+       "      <td>punta arenas</td>\n",
+       "      <td>-53.15</td>\n",
+       "      <td>-70.92</td>\n",
+       "      <td>46.40</td>\n",
+       "      <td>70</td>\n",
+       "      <td>75</td>\n",
+       "      <td>12.75</td>\n",
+       "      <td>CL</td>\n",
+       "      <td>1604030859</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0            City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
-       "0           0          harper   4.38   -7.72     77.72        88          99   \n",
-       "1           1          barrow  71.29 -156.79     23.00        79          90   \n",
-       "2           2     east london -33.02   27.91     68.27        84          96   \n",
-       "3           3       maniitsoq  65.42  -52.90     21.94        83          78   \n",
-       "4           4  velikiy ustyug  60.76   46.31     42.01        93         100   \n",
+       "   Unnamed: 0          City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
+       "0           0          mana   5.66  -53.78     81.55        83         100   \n",
+       "1           1     busselton -33.65  115.33     88.00        21           0   \n",
+       "2           2     carnarvon -24.87  113.63     78.80        65           0   \n",
+       "3           3     esperance -33.87  121.90     73.40        28          93   \n",
+       "4           4  punta arenas -53.15  -70.92     46.40        70          75   \n",
        "\n",
        "   Wind Speed Country        Date  \n",
-       "0        5.28      LR  1603942061  \n",
-       "1        6.93      US  1603941974  \n",
-       "2        6.31      ZA  1603941861  \n",
-       "3        3.13      GL  1603942061  \n",
-       "4        6.44      RU  1603942061  "
+       "0       13.06      GF  1604030858  \n",
+       "1        2.53      AU  1604030859  \n",
+       "2       14.99      AU  1604030859  \n",
+       "3       13.87      AU  1604030859  \n",
+       "4       12.75      CL  1604030859  "
       ]
      },
      "execution_count": 2,
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc983379621f4c05af21e14cab85dd3d",
+       "model_id": "ad77df1fd9a84e64846432af426e130c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "(10, 10)"
+       "(13, 10)"
       ]
      },
      "execution_count": 5,
@@ -299,9 +299,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unfortunately, the city kalashas no hotels within 5000m\n",
-      "Unfortunately, the city mount darwinhas no hotels within 5000m\n",
-      "Unfortunately, the city miram shahhas no hotels within 5000m\n"
+      "Unfortunately, the city barahas no hotels within 5000m\n",
+      "Unfortunately, the city bafoulabehas no hotels within 5000m\n",
+      "Unfortunately, the city barkhanhas no hotels within 5000m\n"
      ]
     }
    ],
@@ -341,16 +341,19 @@
     {
      "data": {
       "text/plain": [
-       "['別邸 海と森',\n",
-       " 'Lakefront Lodge Te Anau',\n",
-       " 'DB Star Hotel',\n",
-       " 'Hotel Alegria Gardens Amakusa',\n",
+       "['Mweebe Executive Lodge',\n",
        " '',\n",
-       " 'Casa de la Aduana Hotel Boutique',\n",
+       " 'Sofitel Legend Old Cataract Aswan',\n",
+       " 'Diplomat Hotel',\n",
+       " 'Shiv Parivar Resort',\n",
+       " 'castle de white house hotel kaduna',\n",
+       " 'Holiday Inn Mauritius Mon Tresor',\n",
+       " 'Laguna Beach Hotel & Spa',\n",
+       " 'LUX Grand Gaube Resort & Villas',\n",
+       " 'SkylineInn Hotel',\n",
        " '',\n",
-       " 'Kashuwa Lodge',\n",
        " '',\n",
-       " 'Sur Plaza Hotel']"
+       " 'Best Western Plus Main Street Inn']"
       ]
      },
      "execution_count": 7,
@@ -395,7 +398,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc983379621f4c05af21e14cab85dd3d",
+       "model_id": "ad77df1fd9a84e64846432af426e130c",
        "version_major": 2,
        "version_minor": 0
       },
