Adjusting formatting for WeatherPy and changing ideal weather parameters

--- a/VacationPy/VacationPy.ipynb
+++ b/VacationPy/VacationPy.ipynb
@@ -80,69 +80,69 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>mana</td>\n",
-       "      <td>5.66</td>\n",
-       "      <td>-53.78</td>\n",
-       "      <td>81.55</td>\n",
-       "      <td>83</td>\n",
-       "      <td>100</td>\n",
-       "      <td>13.06</td>\n",
-       "      <td>GF</td>\n",
-       "      <td>1604030858</td>\n",
+       "      <td>0</td>\n",
+       "      <td>verkh-usugli</td>\n",
+       "      <td>52.70</td>\n",
+       "      <td>115.17</td>\n",
+       "      <td>29.70</td>\n",
+       "      <td>82</td>\n",
+       "      <td>79</td>\n",
+       "      <td>6.87</td>\n",
+       "      <td>RU</td>\n",
+       "      <td>1604114489</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>busselton</td>\n",
-       "      <td>-33.65</td>\n",
-       "      <td>115.33</td>\n",
-       "      <td>88.00</td>\n",
-       "      <td>21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2.53</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1604030859</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>carnarvon</td>\n",
-       "      <td>-24.87</td>\n",
-       "      <td>113.63</td>\n",
-       "      <td>78.80</td>\n",
-       "      <td>65</td>\n",
-       "      <td>0</td>\n",
-       "      <td>14.99</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1604030859</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>esperance</td>\n",
-       "      <td>-33.87</td>\n",
-       "      <td>121.90</td>\n",
-       "      <td>73.40</td>\n",
-       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>fortuna</td>\n",
+       "      <td>40.60</td>\n",
+       "      <td>-124.16</td>\n",
+       "      <td>51.80</td>\n",
        "      <td>93</td>\n",
-       "      <td>13.87</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>1604030859</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.70</td>\n",
+       "      <td>US</td>\n",
+       "      <td>1604114284</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
        "      <td>punta arenas</td>\n",
        "      <td>-53.15</td>\n",
        "      <td>-70.92</td>\n",
-       "      <td>46.40</td>\n",
-       "      <td>70</td>\n",
+       "      <td>48.20</td>\n",
+       "      <td>76</td>\n",
        "      <td>75</td>\n",
-       "      <td>12.75</td>\n",
+       "      <td>6.93</td>\n",
        "      <td>CL</td>\n",
-       "      <td>1604030859</td>\n",
+       "      <td>1604114352</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>mataura</td>\n",
+       "      <td>-46.19</td>\n",
+       "      <td>168.86</td>\n",
+       "      <td>53.01</td>\n",
+       "      <td>89</td>\n",
+       "      <td>100</td>\n",
+       "      <td>13.00</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1604114489</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ahipara</td>\n",
+       "      <td>-35.17</td>\n",
+       "      <td>173.17</td>\n",
+       "      <td>66.67</td>\n",
+       "      <td>88</td>\n",
+       "      <td>46</td>\n",
+       "      <td>14.16</td>\n",
+       "      <td>NZ</td>\n",
+       "      <td>1604114489</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -150,18 +150,18 @@
       ],
       "text/plain": [
        "   Unnamed: 0          City    Lat     Lng  Max Temp  Humidity  Cloudiness  \\\n",
-       "0           0          mana   5.66  -53.78     81.55        83         100   \n",
-       "1           1     busselton -33.65  115.33     88.00        21           0   \n",
-       "2           2     carnarvon -24.87  113.63     78.80        65           0   \n",
-       "3           3     esperance -33.87  121.90     73.40        28          93   \n",
-       "4           4  punta arenas -53.15  -70.92     46.40        70          75   \n",
+       "0           0  verkh-usugli  52.70  115.17     29.70        82          79   \n",
+       "1           1       fortuna  40.60 -124.16     51.80        93           1   \n",
+       "2           2  punta arenas -53.15  -70.92     48.20        76          75   \n",
+       "3           3       mataura -46.19  168.86     53.01        89         100   \n",
+       "4           4       ahipara -35.17  173.17     66.67        88          46   \n",
        "\n",
        "   Wind Speed Country        Date  \n",
-       "0       13.06      GF  1604030858  \n",
-       "1        2.53      AU  1604030859  \n",
-       "2       14.99      AU  1604030859  \n",
-       "3       13.87      AU  1604030859  \n",
-       "4       12.75      CL  1604030859  "
+       "0        6.87      RU  1604114489  \n",
+       "1        4.70      US  1604114284  \n",
+       "2        6.93      CL  1604114352  \n",
+       "3       13.00      NZ  1604114489  \n",
+       "4       14.16      NZ  1604114489  "
       ]
      },
      "execution_count": 2,
@@ -203,7 +203,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad77df1fd9a84e64846432af426e130c",
+       "model_id": "fdb590208bc244e5b2f318a58692271a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -246,7 +246,7 @@
     {
      "data": {
       "text/plain": [
-       "(13, 10)"
+       "(7, 10)"
       ]
      },
      "execution_count": 5,
@@ -257,7 +257,7 @@
    "source": [
     "# Set the parameters for ideal weather (we're rather picky)\n",
     "idealtemp = [65,75]\n",
-    "idealhumidity = 60\n",
+    "idealhumidity = 50\n",
     "idealwind = 7\n",
     "idealclouds = 50\n",
     "# Remove the temperatures that are too hot or too cold\n",
@@ -299,9 +299,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unfortunately, the city barahas no hotels within 5000m\n",
-      "Unfortunately, the city bafoulabehas no hotels within 5000m\n",
-      "Unfortunately, the city barkhanhas no hotels within 5000m\n"
+      "Unfortunately, the city tiznithas no hotels within 5000m\n",
+      "Unfortunately, the city bantouhas no hotels within 5000m\n"
      ]
     }
    ],
@@ -341,19 +340,13 @@
     {
      "data": {
       "text/plain": [
-       "['Mweebe Executive Lodge',\n",
+       "['The Woodbridge',\n",
+       " 'Hotel Viva Villa',\n",
        " '',\n",
-       " 'Sofitel Legend Old Cataract Aswan',\n",
-       " 'Diplomat Hotel',\n",
-       " 'Shiv Parivar Resort',\n",
-       " 'castle de white house hotel kaduna',\n",
-       " 'Holiday Inn Mauritius Mon Tresor',\n",
-       " 'Laguna Beach Hotel & Spa',\n",
-       " 'LUX Grand Gaube Resort & Villas',\n",
-       " 'SkylineInn Hotel',\n",
-       " '',\n",
-       " '',\n",
-       " 'Best Western Plus Main Street Inn']"
+       " 'Alwatane',\n",
+       " 'Sterling Mount Abu',\n",
+       " 'Salalah Gardens Hotel',\n",
+       " '']"
       ]
      },
      "execution_count": 7,
@@ -393,12 +386,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad77df1fd9a84e64846432af426e130c",
+       "model_id": "fdb590208bc244e5b2f318a58692271a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,7 +439,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.4"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
